--- a/components/ToggleButton.module.css
+++ b/components/ToggleButton.module.css
@@ -17,6 +17,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 40px;
+  text-align: center;
+  font-weight: 600;
 }
 
 .button.active {
@@ -29,5 +32,15 @@
 }
 
 .value {
+  color: var(--color-text);
+  font-weight: 600;
+}
+
+.button.active .value {
+  color: var(--color-text-secondary);
+}
+
+/* Multi-toggle variant always uses secondary color */
+.button[data-type="multi"] .value {
   color: var(--color-text-secondary);
 } 
