--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,10 +12,10 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-  }
-  
-  
-  .noise-overlay {
+    background-color: var(--color-page-content);
+}
+
+.noise-overlay {
     position: absolute;
     inset: 0;
     background-image: var(--bg-noise);
@@ -23,9 +23,9 @@ html, body {
     opacity: 1;
     pointer-events: none;
     z-index: 0;
-  }
-  
-  .noise-page-overlay {
+}
+
+.noise-page-overlay {
     position: absolute;
     inset: 0;
     background-image: var(--page-noise);
@@ -33,10 +33,9 @@ html, body {
     opacity: 0.6;
     pointer-events: none;
     z-index: 1;
-  }
-  
+}
 
-  .outside {
+.outside {
     position: relative;
     width: 100%;
     height: 100%;
@@ -49,9 +48,9 @@ html, body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-  }
+}
 
-  .inside {
+.inside {
     position: absolute;
     top: 20px;
     left: 20px;
@@ -67,5 +66,5 @@ html, body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-  }
+}
   
