--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    padding-top: env(safe-area-inset-top);
     height: 100%;
     background-color: var(--color-bg);
 }
